Fix overflow content when sidebar expanded

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,7 @@ html, body {
   font-size: 62.5%;
 }
 
+._overflow-hidden { overflow: hidden!important; }
 ._color-inherit { color: inherit!important; }
 ._list-unstyled { list-style: none!important; }
 ._text-undecorated { text-decoration: none!important; }
